[tool.poetry]
name = "loldrivers"
version = "0.1.0"
description = "loldrivers data generator"
authors = ["info@magicsword.io"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
pandas = "^2.3.0"
Jinja2 = "^3.1.6"
stix2 = "^3.0.1"
colorama = ">=0.3.9"
future = ">=0.16.0"
requests = ">=2.31.0"
configparser = ">=3.5.0"
pymisp = ">=2.4.123"
flask = ">=1.0"
flask-caching = "^2.3.1"
cfscrape = "^2.1.1"
pyzipper = "^0.3.6"
dnspython = "^2.7.0"
ipy = "^1.1"
valhallaapi = "^0.6.0"
lief = "^0.16.6"
pefile = "^2024.8.26"
shortuuid = "^1.0.13"
plyara = "^2.2.8"
cryptography = "^45.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
